# atol-annotation-report

./: README.md  pyproject.toml
extras/: README.md
extras/sample-output/: json_atol.json  json_full.json
reporting-tool/: README.md  agat.yaml  atol_report_template.typ  atol_reporter.py  full_report_template.typ  metadata.json  python_reporter.py  report_main.json  report_template.typ  reporter.pl
src/atol_annotation_report/: mapping_configs.py  python_reporter.py
src/atol_annotation_report/resources/: full_report_template.typ
src/atol_annotation_report/resources/test-data/: test-metadata.json
